# ShooterOfTheBenis

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: assets.c  assets.h  components.c  components.h  comps.h  ecs.c  game.c  game.h  main.c  map.c  map.h  models.c  models.h  physics.c  physics.h  physics_type.c  physics_type.h  player.c  player.h
